--- a/www/index.html
+++ b/www/index.html
@@ -71,6 +71,7 @@
 				});
 
 				$('#enterBtn').click(function() {
+					alert('sss');
 					var nickName = $('#nickNameInput').val();
 					if (nickName.trim().length != 0)
 						that.socket.emit('login', nickName);
