--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,8 @@
   <div class="container" id="historyMsg" style="padding: 20px 25px; overflow: auto;">
   </div>
 
+  <div id="bottom"></div>
+
 	<div class="navbar-fixed-bottom">
 	  <div>
 	  	<textarea class="form-control" rows="3" id="textArea" placeholder="说点什么..."></textarea>
@@ -141,7 +143,9 @@
 				msgToDisplay.style.color = color || '#000';
         msgToDisplay.innerHTML = user + '<span class="timespan">(' + date + ')：</span>' + msg;
         container.appendChild(msgToDisplay);
-        container.scrollTop = container.scrollHeight;
+
+        // 显示最新消息
+				document.getElementById('bottom').scrollIntoView();
 			}
 		}
 
